--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
         <title>Ｓｔｏｒｍｙ</title>
         <link href="styles/styles.css" rel="stylesheet">
         <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
-
+        <meta name="viewport" content="width=320, initial-scale=1">
     </head>
     <body>
     <div id="header">
-        <h1 id="sw">Stormy Weather</h1>
+        <div id="sw">
+            <h1>Stormy Weather</h1>
+        </div>
         <div id="icons">
-            <nav>
-               <div id="mobile2"><nav id="mobile"><i class="fa fa-mobile" aria-hidden="true"></i></nav></div>
-              <div id="tab2"><nav id="tab"><i  class="fa fa-tablet"></i></nav></div>
-                <div id="desk2"><nav id="desk"><i  class="fa fa-desktop fa-1" aria-hidden="true"></i></nav>    </div>
-
-            </nav>
+              <div id="mobile2"><nav id="mobile"><i class="fa fa-mobile" aria-hidden="true"></i></nav></div>
+              <div id="tab2"><nav id="tab"><i class="fa fa-tablet"></i></nav></div>
+              <div id="desk2"><nav id="desk"><i  class="fa fa-desktop fa-1" aria-hidden="true"></i></nav></div>
         </div>
     </div>
 
